Hardcode Omnibox font size at 14 (ignore user and locale settings).

r545332 preserved the omnibox font size of 14 for default user OS
configurations but inadvertently started applying scaling logic used
for dialog text that the omnibox text field never used. It is 14pt.
Always.

Revert to the old behaviour.

Importantly, the way the size delta was being captured would fail to
shrink a font that was too large to fit, if that delta came from user
settings rather than font metrics alone.

Bug: 831340, 838065
Change-Id: I1d4a296fa717694bfe77c14d2590d10d0d9c6e9f
Reviewed-on: https://chromium-review.googlesource.com/1041390
Commit-Queue: Trent Apted <tapted@chromium.org>
Reviewed-by: Peter Kasting <pkasting@chromium.org>
Cr-Commit-Position: refs/heads/master@{#556004}
Former-commit-id: 09115274d6833e9a49a905cc81df26ec5b815e35